Misc fixes to the NativeBrowserLauncher.
Silence some warnings in the NativeBrowserLauncher by:

* avoiding using a "raw type" `Class`;
* avoiding the single-argument form of `java.lang.Runtime.exec`
  (deprecated in Java18).