@@ -25,12 +25,12 @@ public class NativeBrowserLauncher {
     public static void openURL(String url) {
         try {
             if (OSUtils.isOSX()) {
-                Class fileMgr = Class.forName("com.apple.eio.FileManager");
+                Class<?> fileMgr = Class.forName("com.apple.eio.FileManager");
                 Method openURL = fileMgr.getDeclaredMethod("openURL", String.class);
                 openURL.invoke(null, url);
             }
             else if (OSUtils.isWindows()){
-                Runtime.getRuntime().exec("rundll32 url.dll,FileProtocolHandler " + url);
+                Runtime.getRuntime().exec(new String[] {"rundll32", "url.dll,FileProtocolHandler", url});
             }
             else { //assume Unix or Linux
                 String[] browsers = {
